--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,6 @@
-name: "personal-website"
+name: "Ethan Bass"
 output_dir: "."
+
 navbar:
   title: "Ethan Bass"
   right:
@@ -7,5 +8,7 @@ navbar:
       href: about.html
     - text: "Research"
       href: Research.html
+    - text: "Publications"
+      href: Publications.html
     - text: "CV"
       href: CV.html
